--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato|Lobster"
+      href="https://fonts.googleapis.com/css?family=Lobster|Montserrat"
       rel="stylesheet"
     />
     <link
@@ -67,7 +67,6 @@
     <script>
       $(document).ready(function() {
         $(".nav-link").on("click", function(event) {
-          console.log("cool", this.hash);
           // Make sure this.hash has a value before overriding default behavior
           if (this.hash !== "") {
             // Prevent default anchor click behavior
