--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     />
     <title>React App</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="nav" data-offset="50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
